# advent-of-code-2024

./: CMakeLists.txt  README.md  conanfile.py
.conan/: default
.devcontainer/: Dockerfile  devcontainer.json
01/: CMakeLists.txt
01/src/: CMakeLists.txt  distcalc.h  main.cpp
01/test/: CMakeLists.txt  test_aoc01.cpp
02/: CMakeLists.txt
02/src/: CMakeLists.txt  main.cpp  report.cpp  report.h
02/test/: CMakeLists.txt  test_aoc02.cpp
